# ui-service/api/swagger/swagger.yaml
@@ -826,6 +826,77 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /schemas/import/topic:
+      post:
+        tags:
+          - schemas
+        description: Imports new schema from IPFS. Only users with the Root Authority role are allowed to make the request.
+        security:
+        - bearerAuth: []
+        summary: Imports new schema from IPFS.
+        requestBody:
+          description: Object that contains topic message identifier.
+          required: true
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  messageId:
+                    type: string
+        responses:
+          201:
+            description: Successful operation.
+            content:
+              application/json:
+                schema:
+                  type: array
+                  items:
+                    $ref: '#/components/schemas/Schema'
+          401:
+            description: Unauthorized.
+          403:
+            description: Forbidden.
+          500:
+            description: Internal server error.
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Error'
+
+  /schemas/import/preview/{messageId}:
+    get:
+      tags:
+        - schemas
+      description: Schema preview by topic message. Only users with the Root Authority role are allowed to make the request.
+      parameters:
+        - in: path
+          name: messageId
+          schema:
+            type: string
+          required: true
+          description: Message identifier.
+      summary: Schema preview.
+      security:
+      - bearerAuth: []
+      responses:
+        200:
+          description: Successful operation.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Schema'
+        401:
+          description: Unauthorized.
+        403:
+          description: Forbidden.
+        500:
+          description: Internal server error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
   /schemas/export:
     post:
       tags:
@@ -1690,7 +1761,78 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error' 
-          
+  
+  /policies/import/topic:
+    post:
+      tags:
+        - policies
+      description: Imports new policy from IPFS.
+      security:
+      - bearerAuth: []
+      summary: Imports new policy from IPFS.
+      requestBody:
+        description: Object that contains topic message identifier.
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                messageId:
+                  type: string
+      responses:
+        201:
+          description: Successful operation.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/PolicyConfig'
+        401:
+          description: Unauthorized.
+        403:
+          description: Forbidden.
+        500:
+          description: Internal server error.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
+  /policies/import/preview/{messageId}:
+      get:
+        tags:
+          - policies
+        description: Policy preview by topic message.
+        parameters:
+          - in: path
+            name: messageId
+            schema:
+              type: string
+            required: true
+            description: Message identifier.
+        summary: Policy preview.
+        security:
+        - bearerAuth: []
+        responses:
+          200:
+            description: Successful operation.
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/ExportPolicy'
+          401:
+            description: Unauthorized.
+          403:
+            description: Forbidden.
+          500:
+            description: Internal server error.
+            content:
+              application/json:
+                schema:
+                  $ref: '#/components/schemas/Error'
+
   /policies/import/preview:
     post:
       tags:
