# ui-service/src/api/service/schema.ts
@@ -1,9 +1,14 @@
 import { Guardians } from '@helpers/guardians';
 import { Users } from '@helpers/users';
 import { Request, Response, Router } from 'express';
-import { ISchema, Schema, UserRole } from 'interfaces';
+import { ISchema, ISchemaSubmitMessage, ModelActionType, Schema, UserRole } from 'interfaces';
 import { AuthenticatedRequest } from '@auth/auth.interface';
 import { permissionHelper } from '@auth/authorizationHelper';
+import { Blob } from 'buffer';
+import { IPFS } from '@helpers/ipfs';
+import { HederaHelper } from 'vc-modules';
+import { Import } from '@helpers/import';
+import { schemasToContext } from '@transmute/jsonld-schema';
 
 /**
  * Schema route
@@ -100,6 +105,28 @@ schemaAPI.put('/:schemaId/publish', permissionHelper(UserRole.ROOT_AUTHORITY), a
         (await guardians.setSchema(schema));
         const schemes = (await guardians.publishSchema(schemaId));
         schemes.forEach((s) => s.isOwner = s.owner && s.owner == user.did);
+
+        const publishedSchema = await guardians.getSchema(schemaId);
+        const root = await guardians.getRootConfig(user.did);
+        const schemaFile  = new Blob([JSON.stringify(publishedSchema)], {type: "application/json"});
+        const cid = await new IPFS().addFile(await schemaFile.arrayBuffer());
+        const contextFile  = new Blob([JSON.stringify(schemasToContext([publishedSchema.document]))], {type: "application/json"});
+        const contextCid = await new IPFS().addFile(await contextFile.arrayBuffer());
+        
+        let schemaPublishMessage: ISchemaSubmitMessage = {
+            name: publishedSchema.name,
+            owner: publishedSchema.owner,
+            cid: cid,
+            uuid: publishedSchema.uuid,
+            version: publishedSchema.version,
+            operation: ModelActionType.PUBLISH,
+            context_cid: contextCid
+        }
+
+        await HederaHelper
+            .setOperator(root.hederaAccountId, root.hederaAccountKey).SDK
+            .submitMessage(process.env.SUBMIT_SCHEMA_TOPIC_ID, JSON.stringify(schemaPublishMessage));
+
         res.status(200).json(schemes);
     } catch (error) {
         res.status(500).json({ code: 500, message: error.message });
@@ -162,6 +189,38 @@ schemaAPI.post('/import', permissionHelper(UserRole.ROOT_AUTHORITY), async (req:
         await guardians.importSchemes(newSchemes);
         const schemes = (await guardians.getSchemes(null));
         res.status(201).json(schemes);
+    } catch (error) {
+        res.status(500).json({ code: 500, message: error.message });
+    }
+});
+
+schemaAPI.post('/import/topic', permissionHelper(UserRole.ROOT_AUTHORITY), async (req: Request, res: Response) => {
+    try {
+        const importHelper = new Import();
+        const guardians = new Guardians();
+        const messageId = req.body.messageId;
+        const topicMessage = await importHelper.getTopicMessage(messageId);
+        const schemaToImport = await importHelper.getSchema(topicMessage.cid);
+        
+        delete schemaToImport.owner;
+        delete schemaToImport.id;
+        delete schemaToImport.status;
+
+        await guardians.importSchemes([schemaToImport]);
+        const schemes = (await guardians.getSchemes(null));
+        res.status(201).json(schemes);
+    } catch (error) {
+        res.status(500).json({ code: 500, message: error.message });
+    }
+});
+
+schemaAPI.get('/import/preview/:messageId', permissionHelper(UserRole.ROOT_AUTHORITY), async (req: Request, res: Response) => {
+    try {
+        const importHelper = new Import();
+        const messageId = req.params.messageId;
+        const topicMessage = await importHelper.getTopicMessage(messageId);
+        const schemaToImport = await importHelper.getSchema(topicMessage.cid);
+        res.status(200).json(schemaToImport);
     } catch (error) {
         res.status(500).json({ code: 500, message: error.message });
     }
